New loader added

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,11 +20,17 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <jhi-main>
+        <!--<div class="app-loading">-->
+            <!--<svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">-->
+                <!--<circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>-->
+            <!--</svg>-->
+        <!--</div>-->
         <div class="app-loading">
             <div class="lds-css ng-scope">
                 <div class="lds-pacman">
-                    <div><div></div><div></div><div></div></div>
-                    <div><div></div><div></div><div></div></div>
+                    <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg"><circle class="circle" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle></svg>
+                    <!--<div><div></div><div></div><div></div></div>-->
+                    <!--<div><div></div><div></div><div></div></div>-->
                 </div>
             </div>
         </div>
